# nausilus

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
icons/: fix_icon.py
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/creatures/: Bat.ts  Creature.ts
src/denki_upstream_static/: config.ts  jellyfish.ts  math3d.ts  render.ts  types.ts
src/renderer/: Renderer.ts  Scene.ts  Starfield.ts
src/styles/: main.css
