[package]
name = "nausilus"
version = "0.0.1"
description = "Nausilus desktop pet"
authors = ["TheCountOfSaintGermain"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
